# kursovaya4.0

./: README.md  pyproject.toml
data/: my_vacancies.json  vacancies.json
src/: API_service.py  JsonLoader.py  interface.py  main.py  method.py  vac_interp.py  vac_sorting.py  vac_user.py  vacancy.py
tests/: tests.py
