[tool.poetry]
name = "pythonproject4.0"
version = "0.1.0"
description = ""
authors = ["Polina-Makhnach <apolinariy2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"